# im-c

./: .gitignore  BUILD.md  MESSAGING_IMPLEMENTATION.md  README.md  USAGE.md  build-cross-platform.sh  comprehensive_testing_report.docx  comprehensive_testing_report.md
backend/: CMakeLists.txt  Makefile  README.md  build.bat  protocol_lws_minimal.c
backend/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  lws-minimal-ws-server
backend/build-linux-test/: CMakeCache.txt  Makefile  cmake_install.cmake
backend/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: windows-toolchain.cmake
frontend/: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  main.c  tempCodeRunnerFile.c
frontend/build-linux-final/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  im_c
frontend/build-linux-final/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
frontend/build-linux-final/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
frontend/build-linux-test/: CMakeCache.txt
frontend/build-static/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
frontend/build-windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
frontend/build-windows/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
frontend/build-windows/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
frontend/components/: textbox.c  textbox.h
frontend/network/: CTestTestfile.cmake  Makefile  cmake_install.cmake  message_types.c  message_types.h  minimal-ws-client.c  tempCodeRunnerFile.h  websocket_service.c  websocket_service.h  websocket_service_stubs.c
frontend/page/: debug_page.c  test-page.c
frontend/shared-layouts/: chat_interface.c  clay-video-demo.c  login-page.c  login-page.h  login_page.c  login_page.h  mainpage.h  tempCodeRunnerFile.c
tests/: CMakeLists.txt  README.md  debug_backspace  debug_backspace.c  debug_overlap  debug_overlap.c  debug_textbox  debug_textbox.c  debug_textbox2  debug_textbox2.c  run_comprehensive_tests.sh  run_tests.sh
tests/backend/: test_backend_components.c
tests/coverage/: performance_report.txt  test_report.md
tests/coverage/basic/: message_types.c.gcov  mock_websocket_server.c.gcov  test_backend_components.c.gcov  test_clay_components_advanced.c.gcov  test_error_handling.c.gcov  test_message_types.c.gcov  test_textbox.c.gcov  test_ui_components.c.gcov  test_websocket_integration.c.gcov  test_websocket_integration_advanced.c.gcov  unity.c.gcov  websocket_service.c.gcov
tests/edge_cases/: test_error_handling.c
tests/fuzz/: fuzz_message_parser.c
tests/integration/: mock_websocket_server.c  mock_websocket_server.h  test_websocket_integration.c  test_websocket_integration_advanced.c
tests/ui/: test_clay_components_advanced.c  test_ui_components.c
tests/unit/: test_message_types.c  test_textbox.c
